--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="simcir.js"></script>
 <link rel="stylesheet" type="text/css" href="simcir.css" />
+<script type="text/javascript" src="simcir-small-buf.js"></script>
 <script type="text/javascript" src="simcir-basicset.js"></script>
 <link rel="stylesheet" type="text/css" href="simcir-basicset.css" />
 <script type="text/javascript" src="simcir-library.js"></script>
