--- a/sample.html
+++ b/sample.html
@@ -57,44 +57,7 @@ All the other attributes will be used defaults.
 <div class="simcir">
 {
   "width":800,
-  "height":400,
-  "showToolbox":true,
-  "devices":[
-    {"id":"dev0","label":"SmallBUF","state":{"direction":3},"type":"SmallBUF","x":136,"y":152},
-    {"id":"dev1","label":"DC","type":"DC","x":48,"y":152},
-    {"id":"dev2","label":"NAND","type":"NAND","x":280,"y":208},
-    {"id":"dev3","label":"SmallBUF","state":{"direction":3},"type":"SmallBUF","x":328,"y":208},
-    {"id":"dev4","label":"SmallBUF","state":{"direction":3},"type":"SmallBUF","x":248,"y":144},
-    {"id":"dev5","label":"NAND","type":"NAND","x":280,"y":120},
-    {"id":"dev6","label":"SmallBUF","state":{"direction":1},"type":"SmallBUF","x":248,"y":200},
-    {"id":"dev7","label":"SmallBUF","state":{"direction":1},"type":"SmallBUF","x":328,"y":136},
-    {"id":"dev8","label":"In","type":"In","x":184,"y":112},
-    {"id":"dev9","label":"In","type":"In","x":184,"y":216},
-    {"id":"dev10","label":"Out","type":"Out","x":376,"y":120},
-    {"id":"dev11","label":"LED","type":"LED","x":424,"y":120},
-    {"id":"dev12","label":"Out","type":"Out","x":376,"y":208},
-    {"id":"dev13","label":"LED","type":"LED","x":424,"y":208},
-    {"id":"dev14","label":"PushOff","type":"PushOff","x":128,"y":216},
-    {"id":"dev15","label":"PushOff","type":"PushOff","x":128,"y":112}
-  ],
-  "connectors":[
-    {"from":"dev2.in0","to":"dev6.out0"},
-    {"from":"dev2.in1","to":"dev9.out0"},
-    {"from":"dev3.in0","to":"dev2.out0"},
-    {"from":"dev4.in0","to":"dev3.out0"},
-    {"from":"dev5.in0","to":"dev8.out0"},
-    {"from":"dev5.in1","to":"dev4.out0"},
-    {"from":"dev6.in0","to":"dev7.out0"},
-    {"from":"dev7.in0","to":"dev5.out0"},
-    {"from":"dev8.in0","to":"dev15.out0"},
-    {"from":"dev9.in0","to":"dev14.out0"},
-    {"from":"dev10.in0","to":"dev5.out0"},
-    {"from":"dev11.in0","to":"dev10.out0"},
-    {"from":"dev12.in0","to":"dev2.out0"},
-    {"from":"dev13.in0","to":"dev12.out0"},
-    {"from":"dev14.in0","to":"dev1.out0"},
-    {"from":"dev15.in0","to":"dev1.out0"}
-  ]
+  "height":400
 }
 </div>
 
