--- a/sample.html
+++ b/sample.html
@@ -7,6 +7,11 @@
 <script type="text/javascript" src="simcir-basicset.js"></script>
 <link rel="stylesheet" type="text/css" href="simcir-basicset.css" />
 <script type="text/javascript" src="simcir-library.js"></script>
+<script type="text/javascript" src="misc/simcir-altfulladder.js"></script>
+<script type="text/javascript" src="misc/simcir-transmitter.js"></script>
+<script type="text/javascript" src="misc/simcir-delay.js"></script>
+<script type="text/javascript" src="misc/simcir-num.js"></script>
+<script type="text/javascript" src="misc/simcir-dso.js"></script>
 <style type="text/css">
 * {
   font-family: arial, sans-serif;
