[new]jkff.html and dff.html are added

--- a/sample.html
+++ b/sample.html
@@ -38,20 +38,20 @@
 <h1>SimcirJS</h1>
 
 <div style="margin:16px 0px 16px 0px">
-  SimcirJS(a.k.a. Simcir) is a circuit simulator in HTML5 and JavaScript.
+  SimcirJS(a.k.a. Simcir)は、HTML5とJavaScriptによる回路シミュレータです。
   <br/>
-  Let's try your circuit!
+  あなたの回路を試してみましょう。
 </div>
 
-<h2>Usage</h2>
+<h2>使用方法</h2>
 <ul>
-  <li>Choose a device from the toolbox and move to right side.</li>
-  <li>Connect them by drag operation.</li>
-  <li>Click an input node to disconnect.</li>
-  <li>Move a device back to the toolbox if you don't use.</li>
-  <li>Ctrl+Click(Mac:command+Click) to toggle view (Live circuit or JSON data).</li>
-  <li>Double-Click a label to edit device name.</li>
-  <li>Double-Click a library to open the circuit inside.</li>
+  <li>ツールボックスからデバイスを選択し、右側に移動します。</li>
+  <li>ドラッグ操作で接続します。</li>
+  <li>切断するには入力ノードをクリックします。  </li>
+  <li>使用しない場合は、デバイスをツールボックスに戻します。</li>
+  <li>Ctrl+クリック(Mac:command+クリック)で表示(ライブ回路またはJSONデータ)を切り替えます。</li>
+  <li>デバイス名を編集するには、ラベルをダブルクリックします。</li>
+  <li>ライブラリをダブルクリックすると、内部の回路が開きます。</li>
 </ul>
 
 <!--
