[update] modify jkff and dff

--- a/dff.html
+++ b/dff.html
@@ -59,68 +59,67 @@ Specify width and height only.
 All the other attributes will be used defaults.
 -->
 <div class="simcir">
-    {
-        "width":800,
-        "height":400,
-        "showToolbox":true,
-        "toolbox":[
-          {"type":"In"},
-          {"type":"Out"},
-          {"type":"Joint"},
-          {"type":"DC"},
-          {"type":"LED"},
-          {"type":"PushOff"},
-          {"type":"PushOn"},
-          {"type":"Toggle"},
-          {"type":"BUF"},
-          {"type":"NOT"},
-          {"type":"AND"},
-          {"type":"NAND"},
-          {"type":"OR"},
-          {"type":"NOR"},
-          {"type":"XOR"},
-          {"type":"XNOR"},
-          {"type":"OSC"},
-          {"type":"7seg"},
-          {"type":"16seg"},
-          {"type":"4bit7seg"},
-          {"type":"RotaryEncoder"},
-          {"type":"BusIn"},
-          {"type":"BusOut"},
-          {"type":"RS-FF"},
-          {"type":"JK-FF"},
-          {"type":"T-FF"},
-          {"type":"D-FF"},
-          {"type":"8bitCounter"},
-          {"type":"HalfAdder"},
-          {"type":"FullAdder"},
-          {"type":"4bitAdder"},
-          {"type":"2to4BinaryDecoder"},
-          {"type":"3to8BinaryDecoder"},
-          {"type":"4to16BinaryDecoder"},
-          {"type":"AltFullAdder"},
-          {"type":"Transmitter"},
-          {"type":"Delay"},
-          {"type":"NumSrc"},
-          {"type":"NumDsp"},
-          {"type":"DSO"}
-        ],
-        "devices":[
-          {"type":"D-FF","id":"dev0","x":200,"y":88,"label":"D-FF"},
-          {"type":"OSC","id":"dev1","x":168,"y":128,"label":"OSC"},
-          {"type":"DSO","id":"dev2","x":384,"y":128,"label":"DSO","state":{"playing":true,"rangeIndex":0}},
-          {"type":"Toggle","id":"dev3","x":128,"y":40,"label":"Toggle(D)","state":{"on":false}},
-          {"type":"DC","id":"dev4","x":88,"y":40,"label":"DC"}
-        ],
-        "connectors":[
-          {"from":"dev0.in0","to":"dev3.out0"},
-          {"from":"dev0.in1","to":"dev1.out0"},
-          {"from":"dev2.in0","to":"dev1.out0"},
-          {"from":"dev2.in1","to":"dev3.out0"},
-          {"from":"dev2.in3","to":"dev0.out0"},
-          {"from":"dev3.in0","to":"dev4.out0"}
-        ]
-      }
+  {
+    "width":800,
+    "height":400,
+    "showToolbox":true,
+    "toolbox":[
+      {"type":"In"},
+      {"type":"Out"},
+      {"type":"Joint"},
+      {"type":"DC"},
+      {"type":"LED"},
+      {"type":"PushOff"},
+      {"type":"PushOn"},
+      {"type":"Toggle"},
+      {"type":"BUF"},
+      {"type":"NOT"},
+      {"type":"AND"},
+      {"type":"NAND"},
+      {"type":"OR"},
+      {"type":"NOR"},
+      {"type":"XOR"},
+      {"type":"XNOR"},
+      {"type":"OSC"},
+      {"type":"7seg"},
+      {"type":"16seg"},
+      {"type":"4bit7seg"},
+      {"type":"RotaryEncoder"},
+      {"type":"BusIn"},
+      {"type":"BusOut"},
+      {"type":"RS-FF"},
+      {"type":"JK-FF"},
+      {"type":"T-FF"},
+      {"type":"D-FF"},
+      {"type":"8bitCounter"},
+      {"type":"HalfAdder"},
+      {"type":"FullAdder"},
+      {"type":"4bitAdder"},
+      {"type":"2to4BinaryDecoder"},
+      {"type":"3to8BinaryDecoder"},
+      {"type":"4to16BinaryDecoder"},
+      {"type":"AltFullAdder"},
+      {"type":"Transmitter"},
+      {"type":"Delay"},
+      {"type":"NumSrc"},
+      {"type":"NumDsp"},
+      {"type":"DSO"}
+    ],
+    "devices":[
+      {"type":"OSC","id":"dev0","x":0,"y":0,"label":"OSC(ClockPulse)"},
+      {"type":"NumSrc","id":"dev1","x":8,"y":48,"label":"NumSrc","state":{"direction":0,"on":false}},
+      {"type":"DSO","id":"dev2","x":96,"y":0,"label":"DSO","state":{"playing":true,"rangeIndex":0}},
+      {"type":"D-FF","id":"dev3","x":32,"y":40,"label":"D-FF"}
+    ],
+    "connectors":[
+      {"from":"dev2.in0","to":"dev0.out0"},
+      {"from":"dev2.in1","to":"dev1.out0"},
+      {"from":"dev2.in2","to":"dev3.out0"},
+      {"from":"dev2.in3","to":"dev3.out1"},
+      {"from":"dev3.in0","to":"dev1.out0"},
+      {"from":"dev3.in1","to":"dev0.out0"}
+    ]
+  }
 </div>
 
 
