--- a/jkff.html
+++ b/jkff.html
@@ -106,23 +106,20 @@ All the other attributes will be used defaults.
       {"type":"DSO"}
     ],
     "devices":[
-      {"type":"DSO","id":"dev0","x":384,"y":128,"label":"DSO","state":{"playing":true,"rangeIndex":0}},
-      {"type":"JK-FF","id":"dev1","x":216,"y":120,"label":"JK-FF"},
-      {"type":"Toggle","id":"dev2","x":112,"y":72,"label":"Toggle(J)","state":{"on":false}},
-      {"type":"Toggle","id":"dev3","x":112,"y":184,"label":"Toggle(K)","state":{"on":false}},
-      {"type":"DC","id":"dev4","x":8,"y":136,"label":"DC"},
-      {"type":"OSC","id":"dev5","x":88,"y":128,"label":"OSC"}
+      {"type":"OSC","id":"dev0","x":0,"y":0,"label":"OSC(ClockPulse)"},
+      {"type":"NumSrc","id":"dev1","x":8,"y":48,"label":"NumSrc","state":{"direction":0,"on":false}},
+      {"type":"JK-FF","id":"dev2","x":32,"y":48,"label":"JK-FF"},
+      {"type":"DSO","id":"dev3","x":96,"y":0,"label":"DSO","state":{"playing":true,"rangeIndex":0}},
+      {"type":"NumSrc","id":"dev4","x":8,"y":80,"label":"NumSrc","state":{"direction":0,"on":false}}
     ],
     "connectors":[
-      {"from":"dev0.in0","to":"dev5.out0"},
-      {"from":"dev0.in1","to":"dev2.out0"},
-      {"from":"dev0.in2","to":"dev3.out0"},
-      {"from":"dev0.in3","to":"dev1.out0"},
-      {"from":"dev1.in0","to":"dev2.out0"},
-      {"from":"dev1.in1","to":"dev5.out0"},
-      {"from":"dev1.in2","to":"dev3.out0"},
-      {"from":"dev2.in0","to":"dev4.out0"},
-      {"from":"dev3.in0","to":"dev4.out0"}
+      {"from":"dev2.in0","to":"dev1.out0"},
+      {"from":"dev2.in1","to":"dev0.out0"},
+      {"from":"dev2.in2","to":"dev4.out0"},
+      {"from":"dev3.in0","to":"dev0.out0"},
+      {"from":"dev3.in1","to":"dev1.out0"},
+      {"from":"dev3.in2","to":"dev4.out0"},
+      {"from":"dev3.in3","to":"dev2.out0"}
     ]
   }
 </div>
