--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <!doctype html>
-九州テクノカレッジ　論理回路(富田)
+<head>
+    九州テクノカレッジ　論理回路(富田)
+</head>
+<div style="margin:16px 0px 16px 0px">
+    九州テクノカレッジ　ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．
+  </div>
+  
+
 </html>
