[update] adding README.md

--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
 <!doctype html>
-<head>
-    九州テクノカレッジ　論理回路(富田)
-</head>
-<div style="margin:16px 0px 16px 0px">
-    九州テクノカレッジ　ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．
-  </div>
-  
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <script type="text/javascript" src="simcir.js"></script>
+        <link rel="stylesheet" type="text/css" href="simcir.css" />
+        <script type="text/javascript" src="simcir-basicset.js"></script>
+        <link rel="stylesheet" type="text/css" href="simcir-basicset.css" />
+        <script type="text/javascript" src="simcir-library.js"></script>
+        <script type="text/javascript" src="misc/simcir-altfulladder.js"></script>
+        <script type="text/javascript" src="misc/simcir-transmitter.js"></script>
+        <script type="text/javascript" src="misc/simcir-delay.js"></script>
+        <script type="text/javascript" src="misc/simcir-num.js"></script>
+        <script type="text/javascript" src="misc/simcir-dso.js"></script>
+        <style type="text/css">
+            * {
+            font-family: arial, sans-serif;
+            }
 
+            .code {
+            margin: 16px 0px 16px 0px;
+            padding: 4px;
+            border-width: 0px 0px 0px 4px;
+            border-color: #cccccc;
+            border-style: solid;
+            background-color: #f0f0f0;
+            white-space: pre;
+            }
+
+            .note {
+            color: hsl(240, 100%, 50%);
+            }
+        </style>
+    <title>
+        <h1>九テク論理回路</h1>
+    </title>
+</head>
+<body>
+    <h1>九州テクノカレッジ　論理回路(富田)</h1>
+    <div style="margin:16px 0px 16px 0px">
+        九州テクノカレッジ　ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．
+    </div>
+    <h2>授業資料</h2>
+    <ul>
+        <li>
+            <a href=""></a>
+        </li>
+    </ul>
+
+
+</body>
+
+<div>
+    参考資料
+    <li>
+        <a href="https://www.mext.go.jp/a_menu/shougai/senshuu/06032207.htm">専修学校設置基準の一部を改正する省令の施行等について（通知）</a>
+    </li>
+    
+</div>
 </html>
