[update] add links in README.md

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>授業資料</h2>
     <ul>
         <li>
-            <a href=""></a>
+            <a href="https://github.com/yutomi7a/simcirjs">こちらのサイトで公開しています．</a>
         </li>
     </ul>
 
