[update] index.html and README.md become identical

--- a/index.html
+++ b/index.html
@@ -1,60 +1,29 @@
-<!doctype html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-        <script type="text/javascript" src="simcir.js"></script>
-        <link rel="stylesheet" type="text/css" href="simcir.css" />
-        <script type="text/javascript" src="simcir-basicset.js"></script>
-        <link rel="stylesheet" type="text/css" href="simcir-basicset.css" />
-        <script type="text/javascript" src="simcir-library.js"></script>
-        <script type="text/javascript" src="misc/simcir-altfulladder.js"></script>
-        <script type="text/javascript" src="misc/simcir-transmitter.js"></script>
-        <script type="text/javascript" src="misc/simcir-delay.js"></script>
-        <script type="text/javascript" src="misc/simcir-num.js"></script>
-        <script type="text/javascript" src="misc/simcir-dso.js"></script>
-        <style type="text/css">
-            * {
-            font-family: arial, sans-serif;
-            }
-
-            .code {
-            margin: 16px 0px 16px 0px;
-            padding: 4px;
-            border-width: 0px 0px 0px 4px;
-            border-color: #cccccc;
-            border-style: solid;
-            background-color: #f0f0f0;
-            white-space: pre;
-            }
-
-            .note {
-            color: hsl(240, 100%, 50%);
-            }
-        </style>
-    <title>
-        <h1>九テク論理回路</h1>
-    </title>
-</head>
-<body>
-    <h1>九州テクノカレッジ　論理回路(富田)</h1>
-    <div style="margin:16px 0px 16px 0px">
-        九州テクノカレッジ　ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．
-    </div>
-    <h2>授業資料</h2>
-    <ul>
-        <li>
-            <a href="https://github.com/yutomi7a/simcirjs">こちらのサイトで公開しています．</a>
-        </li>
-    </ul>
-
-
-</body>
-
-<div>
-    参考資料
-    <li>
-        <a href="https://www.mext.go.jp/a_menu/shougai/senshuu/06032207.htm">専修学校設置基準の一部を改正する省令の施行等について（通知）</a>
-    </li>
-    
-</div>
-</html>
+<h1><em>九州テクノカレッジ　論理回路</em>(富田2020)</h1>
+<hr>
+<h2>はじめに</h2>
+<p>2020年九州テクノカレッジ・ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．</p>
+<h2>授業資料</h2>
+<p>2/12の後半以降の資料のみ公開予定です．</p>
+<ul>
+<li>スライド
+<ul>
+<li><a href="https://www.dropbox.com/s/ytqq2k5z9hd8hz6/200212b.pdf">2月12日後半</a></li>
+<li><a href="https://www.dropbox.com/s/wlshuvalvedbh1g/200219a.pdf">2月19日前半</a></li>
+<li><a href="https://www.dropbox.com/s/hhxwycld0x0le4d/200219b.pdf">2月19日後半</a></li>
+<li><a href="https://www.dropbox.com/s/xhxd60qtwg6scqz/200226a.pdf">2月26日前半</a></li>
+<li><a href="https://www.dropbox.com/s/l8wjvgq8q0cp929/200226b.pdf">2月26日後半</a></li>
+<li><a href="https://www.dropbox.com/s/6pynw7l3zv57wuk/200318a.pdf">3月18日前半</a></li>
+<li><a href="https://www.dropbox.com/s/4zeuhecav2szhpg/200318b.pdf">3月18日後半</a></li>
+<li><a href="https://www.dropbox.com/s/dplk8qh541ehj2g/200325a.pdf">3月25日前半</a></li>
+<li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
+</ul>
+</li>
+<li>参考文献
+<ul>
+<li><a href="https://www.mext.go.jp/a_menu/shougai/senshuu/06032207.htm">専修学校設置基準の一部を改正する省令の施行等について（通知）</a></li>
+</ul>
+</li>
+</ul>
+<p>Copyright (c) 2020 Yu Tomita</p>
+<p>Licensed under the MIT license:
+<a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></p>
