[update] adding hatada's homepage

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
 </ul>
 </li>
-<li>参考文献
-<ul>
-<li><a href="https://www.mext.go.jp/a_menu/shougai/senshuu/06032207.htm">専修学校設置基準の一部を改正する省令の施行等について（通知）</a></li>
 </ul>
-</li>
+<h3>参考文献</h3>
+<ul>
+<li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
+<li><a href="https://www.mext.go.jp/a_menu/shougai/senshuu/06032207.htm">専修学校設置基準の一部を改正する省令の施行等について（通知）</a></li>
 </ul>
 <p>Copyright (c) 2020 Yu Tomita</p>
 <p>Licensed under the MIT license:
