[update] changing the title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1><em>九州テクノカレッジ　論理回路</em>(富田2020)</h1>
+<h1><em>九州テクノカレッジ　論理回路サポートサイト</em>(富田2020)</h1>
 <hr>
 <h2>はじめに</h2>
 <p>2020年九州テクノカレッジ・ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．</p>
