[update] modify blank.html

--- a/blank.html
+++ b/blank.html
@@ -15,6 +15,30 @@
     <title></title>
   </head>
   <body>
+    <h1>SimcirJS</h1>
+
+    <div style="margin:16px 0px 16px 0px">
+      SimcirJS(a.k.a. Simcir)は、HTML5とJavaScriptによる回路シミュレータです。
+      <br/>
+      あなたの回路を試してみましょう。
+    </div>
+
+    <h2>使用方法</h2>
+    <ul>
+      <li>ツールボックスからデバイスを選択し、右側に移動します。</li>
+      <li>ドラッグ操作で接続します。</li>
+      <li>切断するには入力ノードをクリックします。  </li>
+      <li>使用しない場合は、デバイスをツールボックスに戻します。</li>
+      <li>Ctrl+クリック(Mac:command+クリック)で表示(ライブ回路またはJSONデータ)を切り替えます。</li>
+      <li>デバイス名を編集するには、ラベルをダブルクリックします。</li>
+      <li>ライブラリをダブルクリックすると、内部の回路が開きます。</li>
+    </ul>
+
+    <!--
+    Specify width and height only.
+    All the other attributes will be used defaults.
+    -->
+
     <div class="simcir">
     <!-- paste here your circuit data -->
     </div>
