[fix] modify index.html and README.html

--- a/README.html
+++ b/README.html
@@ -1,7 +1,9 @@
 <h1 id="九州テクノカレッジ-論理回路サポートサイト富田2020"><em>九州テクノカレッジ　論理回路サポートサイト</em>(富田2020)</h1>
 <hr />
 <h2 id="はじめに">はじめに</h2>
-<p>2020年九州テクノカレッジ・ハイテク情報科向けの論理回路に関する資料等を提供するサイトです． ## 授業資料 2/12の後半以降の資料のみ公開予定です．</p>
+<p>2020年九州テクノカレッジ・ハイテク情報科向けの論理回路に関する資料等を提供するサイトです．</p>
+<h2 id="授業資料">授業資料</h2>
+<p>2/12の後半以降の資料のみ公開予定です．</p>
 <ul>
 <li>スライド
 <ul>
@@ -16,7 +18,7 @@
 <li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a> ### 参考文献</li>
 </ul></li>
 <li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
-<li><a href="sandbox.html">simcirJS(forked)</a></li>
+<li><a href="sandbox.html">SimcirJS(forked)</a></li>
 </ul>
 <p>Copyright (c) 2020 Yu Tomita</p>
 <p>Licensed under the MIT license: <a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></p>
