[fix] modify README.* and index.html again!

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <li><a href="https://www.dropbox.com/s/6pynw7l3zv57wuk/200318a.pdf">3月18日前半</a></li>
 <li><a href="https://www.dropbox.com/s/4zeuhecav2szhpg/200318b.pdf">3月18日後半</a></li>
 <li><a href="https://www.dropbox.com/s/dplk8qh541ehj2g/200325a.pdf">3月25日前半</a></li>
-<li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a> ### 参考文献</li>
+<li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
 </ul></li>
+</ul>
+<h3 id="参考文献">参考文献</h3>
+<ul>
 <li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
 <li><a href="sandbox.html">SimcirJS(forked)</a></li>
-</ul>
-<p>Copyright (c) 2020 Yu Tomita</p>
-<p>Licensed under the MIT license: <a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></p>
