[update] add some info to .gitignore and README.md

--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@
 <ul>
 <li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
 <li><a href="sandbox.html">SimcirJS(forked)</a></li>
+</ul>
+<p>Copyright (c) 2020 Yu Tomita</p>
+<p>Licensed under the MIT license: <a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></p>
