[update] add link 2 200525a slides to index.html

--- a/README.html
+++ b/README.html
@@ -16,6 +16,7 @@
 <li><a href="https://www.dropbox.com/s/4zeuhecav2szhpg/200318b.pdf">3月18日後半</a></li>
 <li><a href="https://www.dropbox.com/s/dplk8qh541ehj2g/200325a.pdf">3月25日前半</a></li>
 <li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
+<li><a href="https://yutomi7a.github.io/simcirjs/">5月25日前半</a></li>
 </ul></li>
 </ul>
 <h3 id="参考文献">参考文献</h3>
@@ -23,5 +24,8 @@
 <li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
 <li><a href="sandbox.html">SimcirJS(forked)</a></li>
 </ul>
+<h3 id="講師について">講師について</h3>
+<p><a href="https://www.researchgate.net/profile/Yu_Tomita3">Yu Tomita on ResearchGate</a></p>
+<p><a href="https://researchmap.jp/yu_tomita">researchmap</a></p>
 <p>Copyright (c) 2020 Yu Tomita</p>
 <p>Licensed under the MIT license: <a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></p>
