--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <li><a href="https://www.dropbox.com/s/dplk8qh541ehj2g/200325a.pdf">3月25日前半</a></li>
 <li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
 <li><a href="https://yutomi7a.github.io/simcirjs/200527a/#/">5月27日前半</a></li>
+<li><a href="https://yutomi7a.github.io/simcirjs/200527b/#/">5月27日後半</a></li>
 </ul></li>
 </ul>
 <h3 id="参考文献">参考文献</h3>
