[fix] modify 200527a and b slides

--- a/200527b/index.html
+++ b/200527b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Logic Circuits</title>
+  <title>200527b</title>
 
   <meta name="description" content="">
   <meta name="author" content="">
@@ -520,7 +520,7 @@
             <h3><a id="user-content-カウンタをミーリーマシンで表す" class="anchor" href="#カウンタをミーリーマシンで表す" aria-hidden="true"></a>カウンタをミーリーマシンで表す</h3>
 <p><img src="media/counter1.jpg" alt=""></p>
 <ul>
-<li>$q_i$: $i$を出力する前の状態($0\leq i\leq 4$)</li>
+<li>$q_i$: $i$を出力し続ける状態($0\leq i\leq 4$)</li>
 </ul>
 
             </section>
