[update] add links to index.html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@
 <li><a href="https://yutomi7a.github.io/simcirjs/200527b/#/">5月27日後半</a></li>
 </ul></li>
 </ul>
-<h3 id="参考文献">参考文献</h3>
+<h3 id="javascript教材">JavaScript教材</h3>
 <ul>
-<li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a></li>
-<li><a href="sandbox.html">SimcirJS(forked)</a></li>
+<li><a href="http://home.a00.itscom.net/hatada/_toc/dc.html#dc2sim">デジタル回路[JavaScript版]</a>
+<ul>
+<li>デジタル回路の基礎を学べるサイト.</li>
+<li>残念ながらJK-FFやD-FFなどがうまく動いていません(2020年5月現在).</li>
+</ul></li>
+<li><a href="sandbox.html">SimcirJS(forked)</a>
+<ul>
+<li>自分で回路を組んで動作を確認できるJavaScriptプログラム.</li>
+<li>こちらでforkし, OSC(クロックパルスを入力するデバイス)の周波数を見やすいように調整しました.</li>
+<li>残念ながら多くのスマートフォンでは操作に制限があります.</li>
+</ul></li>
 </ul>
+<h3 id="参考文献五十音順">参考文献(五十音順)</h3>
+<p>おすすめの教科書ではありませんが, 特に参考にしているものだけを取り上げます. - 岩出秀平『<a href="http://muisuri.my.coocan.jp/electro.html">[第３版] 明快解説・箇条書式　ディジタル回路</a> 』 - グッドステイン, R.L.『ブール代数』赤攝也訳, 培風館, 1971. - 細井勉『<a href="https://www.nippyo.co.jp/shop/book/1291.html">情報科学のための論理数学</a>』 - 宮崎佳典 新谷誠 中谷広正『<a href="http://www.tokyo-tosho.co.jp/books/ISBN978-4-489-02152-7.html">理工系のための離散数学</a>』 - 湯田春雄 堀端孝俊『<a href="https://www.morikita.co.jp/books/book/1864">しっかり学べる 基礎ディジタル回路</a>』</p>
 <h3 id="講師について">講師について</h3>
+<p>普段は回路と無縁な研究をしています.</p>
 <p><a href="https://www.researchgate.net/profile/Yu_Tomita3">Yu Tomita on ResearchGate</a></p>
 <p><a href="https://researchmap.jp/yu_tomita">researchmap</a></p>
 <p>Copyright (c) 2020 Yu Tomita</p>
