--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <li><a href="https://www.dropbox.com/s/4zeuhecav2szhpg/200318b.pdf">3月18日後半</a></li>
 <li><a href="https://www.dropbox.com/s/dplk8qh541ehj2g/200325a.pdf">3月25日前半</a></li>
 <li><a href="https://www.dropbox.com/s/4bpfvpm9ouuyno5/200325b.pdf">3月25日後半</a></li>
-<li><a href="https://yutomi7a.github.io/simcirjs/200527a/#/">5月27日(6月1日)前半</a></li>
-<li><a href="https://yutomi7a.github.io/simcirjs/200527b/#/">5月27日(6月1日)後半</a></li>
+<li><a href="https://yutomi7a.github.io/simcirjs/200527a/#/">5月27日(6月1日)前半</a> <a href="https://www.dropbox.com/s/n4joa7jv2x5p580/200527a.pdf?dl=0">pdf版はこちら</a></li>
+<li><a href="https://yutomi7a.github.io/simcirjs/200527b/#/">5月27日(6月1日)後半</a> <a href="https://www.dropbox.com/s/lmg2ypsgxicsg2t/200527b.pdf?dl=0">pdf版はこちら</a></li>
 </ul></li>
 <li>課題(メールなどで提出)
 <ul>
