[update] change transition property to none

--- a/200527a/index.html
+++ b/200527a/index.html
@@ -452,9 +452,10 @@
             
             <h2><a id="user-content-順序回路" class="anchor" href="#順序回路" aria-hidden="true"></a>順序回路</h2>
 <ul>
-<li>出力が入力や出力の時間順序に依存する回路を
+<li>
+<p>出力が入力や出力の時間順序に依存する回路を
 <strong style="color:red">順序回路</strong>
-と呼ぶ
+と呼ぶ</p>
 <ul>
 <li>ある時点の<strong>状態</strong>と入力で次の出力が決定</li>
 <li><strong style="color:blue">入力と直前の内部状態</strong>の関数で出力を表現</li>
@@ -1045,7 +1046,7 @@
         mouseWheel: false,
         hideAddressBar: true,
         previewLinks: false,
-        transition: 'default',
+        transition: 'none',
         transitionSpeed: 'default',
         backgroundTransition: 'default',
         viewDistance: 3,
