[update] add deadlines

--- a/200603_slides.html
+++ b/200603_slides.html
@@ -859,7 +859,8 @@
 </ol>
 <ul>
 <li>前回と同様メールまたはLINEアカウントから画像を提出すること.</li>
-<li>締め切り: 6/10 23:59まで(以降の提出は減点)</li>
+<li><s>締め切り: 6/10 23:59まで(以降の提出は減点)</s></li>
+<li>締め切り: 6/15 23:59まで(以降の提出は減点)</li>
 </ul>
 <footer>Yu Tomita</footer>
 </section>
