--- a/index.html
+++ b/index.html
@@ -27,11 +27,24 @@
 <li>提出先: yutomi7a@じーめーる.com (じーめーるをgmailに書き換え) またはLINEアカウント</li>
 <li>解答した用紙はカメラやスキャナで撮影し, 画像ファイルにして提出してください
 <ul>
-<li>上のpdfをプリントアウトして書き込み</li>
-<li>ノートに書き写してもOK</li>
+<li>ノートやレポート用紙に書き写してもOK</li>
+<li>可能ならpdfファイルのまま書き込み後提出してもOK</li>
 </ul></li>
 </ul></li>
+<li>6月3日:</li>
+</ul>
+<ol type="1">
+<li>次の論理関数をカルノー図を用いて簡単化し最小積和形を求めよ.
+<ul>
+<li><span class="math inline">$F_1= A\,B+A\,C+A\,\overline{B}\,C+\overline{A}\,B\,\overline{C}$</span></li>
+<li><span class="math inline">$F_2= W\,X\,Y\,Z+\overline{W}\,\overline{X}+X\,\overline{Y}\,Z$</span></li>
 </ul></li>
+<li><span class="math inline"><em>F</em><sub>2</sub></span>の解答をAND, OR, NOT素子だけを使って実現してみよ(3入力のAND,OR素子を使っても構わない).
+<ul>
+<li>前回と同様メールまたはLINEアカウントから画像またはpdfファイルを提出すること.</li>
+<li>締め切り: 6/15 23:59まで(以降の提出は減点)</li>
+</ul></li>
+</ol></li>
 </ul>
 <h3 id="javascript教材">JavaScript教材</h3>
 <ul>
@@ -55,6 +68,7 @@
 <li>細井勉『<a href="https://www.nippyo.co.jp/shop/book/1291.html">情報科学のための論理数学</a>』</li>
 <li>宮崎佳典 新谷誠 中谷広正『<a href="http://www.tokyo-tosho.co.jp/books/ISBN978-4-489-02152-7.html">理工系のための離散数学</a>』</li>
 <li>湯田春雄 堀端孝俊『<a href="https://www.morikita.co.jp/books/book/1864">しっかり学べる 基礎ディジタル回路</a>』</li>
+<li>Posthoff, Christian., Steinbach, Bernd., <em><a href="https://www.springer.com/jp/book/9783030024192">Logic Functions and Equations</a></em></li>
 </ul>
 <h2 id="講師について">講師について</h2>
 <p>普段は回路と無縁な研究をしています.</p>
