[update] adding slides on self dual functions

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <ul>
 <li>スライド
 <ul>
+<li><a href="https://yutomi7a.github.io/simcirjs/self_dual_slides.html">補助スライド</a></li>
 <li><a href="https://www.dropbox.com/s/ytqq2k5z9hd8hz6/200212b.pdf">2月12日後半</a></li>
 <li><a href="https://www.dropbox.com/s/wlshuvalvedbh1g/200219a.pdf">2月19日前半</a></li>
 <li><a href="https://www.dropbox.com/s/hhxwycld0x0le4d/200219b.pdf">2月19日後半</a></li>
